src/objects/B2B_Order__c.object
<CustomObject>
    <fields>
        <fullName>B2B_NMBL_Quote_Number__c</fullName>
        <label>B2B NMBL Quote Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Error_Messages__c</fullName>
        <label>B2B Order Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Status__c</fullName>
        <label>B2B Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Order_Type__c</fullName>
        <label>B2B Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Purchase_Order_Amount__c</fullName>
        <label>B2B Partner Purchase Order Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Purchase_Order_Date__c</fullName>
        <label>B2B Partner Purchase Order Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>B2B_Partner_Purchase_Order__c</fullName>
        <label>B2B Partner Purchase Order</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>B2B Partner</label>
        <referenceTo>B2B_Partner__c</referenceTo>
        <relationshipLabel>B2B Orders</relationshipLabel>
        <relationshipName>B2B_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_1__c</fullName>
        <label>Bill To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_2__c</fullName>
        <label>Bill To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Company__c</fullName>
        <label>Bill To Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Email__c</fullName>
        <label>Bill To Contact Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <label>Bill To Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Phone__c</fullName>
        <label>Bill To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <label>Bill To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Address_1__c</fullName>
        <label>End Customer Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Address_2__c</fullName>
        <label>End Customer Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_City__c</fullName>
        <label>End Customer City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Company__c</fullName>
        <label>End Customer Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Email__c</fullName>
        <label>End Customer Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Name__c</fullName>
        <label>End Customer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Contact_Phone__c</fullName>
        <label>End Customer Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Customer_Country__c</fullName>
        <label>End Customer Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_State__c</fullName>
        <label>End Customer State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Customer_Zip_Postal_Code__c</fullName>
        <label>End Customer Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_Address_1__c</fullName>
        <label>Install Location Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_Address_2__c</fullName>
        <label>Install Location Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_City__c</fullName>
        <label>Install Location City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_Contact_Email__c</fullName>
        <label>Install Location Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Install_Location_Contact_Name__c</fullName>
        <label>Install Location Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_Contact_Phone__c</fullName>
        <label>Install Location Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Install_Location_Country__c</fullName>
        <label>Install Location Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_State__c</fullName>
        <label>Install Location State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location_Zip_Postal_Code__c</fullName>
        <label>Install Location Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Location__c</fullName>
        <label>Install Location</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMBL_Approval_Rejection_Date_Time__c</fullName>
        <label>NMBL Approval/Rejection Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NMBL_Notes_by_OA__c</fullName>
        <label>NMBL Notes by OA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NMBL_Quote_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to custom Quote.</description>
        <label>NMBL Quote ID</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>B2B Orders</relationshipLabel>
        <relationshipName>B2B_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NMBL_Sales_Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NMBL Sales Order Number</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>B2B Orders</relationshipLabel>
        <relationshipName>B2B_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_to_OA__c</fullName>
        <label>Notes to OA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Install_Date__c</fullName>
        <label>Planned Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Ship_Date__c</fullName>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_1__c</fullName>
        <label>Ship To Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <label>Ship To Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Company__c</fullName>
        <label>Ship To Company</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Email__c</fullName>
        <label>Ship To Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Name__c</fullName>
        <label>Ship To Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Phone__c</fullName>
        <label>Ship To Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip_Postal_Code__c</fullName>
        <label>Ship To Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Service_Level__c</fullName>
        <label>Shipment Service Level</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Lines_Received__c</fullName>
        <label>Total Lines Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_or_GST__c</fullName>
        <label>VAT or GST#</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>B2B Order</label>
    <nameField>
        <displayFormat>BORD-{00000000}</displayFormat>
        <label>B2B Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>